# Half-Life-3

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  run.sh
.github/workflows/: ci.yml
assets/worlds/: meadow.json
engine/core/: camera.cpp  camera.h  engine.cpp  engine.h  input.h  loop.h  render.cpp  render_frame.h
engine/ecs/: components.h  systems.cpp  systems.h  tile.h  world_loader.cpp  world_loader.h
engine/resources/: image_manager.cpp  image_manager.h
engine/tests/: CMakeLists.txt  system_npc_movement_logic_test.cpp  world_loader_test.cpp
game/: CMakeLists.txt  main.cpp
game/assets/worlds/: meadow.json
game/loops/: game_loop.cpp  game_loop.h  menu_loop.cpp  menu_loop.h
scripts/: build.sh  format.sh  formatter.sh  play.sh  run.sh
src/: components.h  main.cpp  systems.cpp  systems.h
src/game_mechanics/: npc.cpp  npc.h  weapons.h
src/loops/: game_loop.cpp  game_loop.h
src/random/: random_positions.cpp  random_positions.h
src/render/: colorDmg.cpp  colorDmg.h  textToImage.cpp  textToImage.h  ui_render.cpp  ui_render.h  weapon_textures.cpp  weapon_textures.h
